2006-01-01 Braden McDaniel  <braden@endoframe.com>

	boost::read_write_mutex was broken and has been removed in Boost
	1.33.1.  Use boost::mutex instead.

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::scene::url() const): Changed lock from
	boost::read_write_mutex::scoped_read_lock to
	boost::mutex::scoped_lock.
	(openvrml::scene::url(const std::string &)): Changed lock from
	boost::read_write_mutex::scoped_write_lock to
	boost::mutex::scoped_lock.
	* src/libopenvrml/openvrml/browser.h (openvrml::scene): Changed
	url_mutex_ from boost::read_write_mutex to boost::mutex.

2006-01-01 Braden McDaniel  <braden@endoframe.com>

	* tests/testsuite.at (Unrecognized node type): Updated expected
	output.
	(PROTO with a conflicting eventIn and exposedField): Updated
	expected output.
	(PROTO with a conflicting eventOut and exposedField): Updated
	expected output.

2006-01-01 Braden McDaniel  <braden@endoframe.com>

	* tests/testsuite.at (Unrecognized EXTERNPROTO): Ignore stdout,
	stderr.
	(Unimplemented EXTERNPROTO): Ignore stdout, stderr.

2006-01-01 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::create_vrml_from_stream(std::istream &)):
	Provide a real URI associated with the vrmlstream.  This is needed
	so that PROTOs in the stream can have valid node_class_ids.

2006-01-01 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/Makefile.am: touch files generated by antlr;
	antlr doesn't update the timestamps correctly.

2006-01-01 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/Makefile.am (EXTRA_DIST): Added
	openvrml-config.h.in; removed mistakenly listed
	openvrml-gl-config.h.in and openvrml-gl-common.h.

2005-12-31 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(shape_node::shape_node(const node_type &, const
	boost::shared_ptr<openvrml::scope> &)): Reordered member
	initializer list to match declaration order.
